# aws_container

./: .gitignore  Dockerfile_bk_lambda  README.md  bk_Dockerfile  langchain-agent-1.py  langchain-agent-2.py  langchain-agent-3.py  pyproject copy.toml  pyproject.toml  pyproject_bk_lambda.toml
chapter2/: bkDockerfile_bk  invoke-model.py  streaming.py
chapter3/: 1_langchain.py  2_streamlit.py  3_streamlit-dynamodb.py  BK1_Dockerfile  BK_pyproject.toml  Bk_Dockerfile  Dockerfile  lambda_function.py  pyproject.toml
chapter3/python/boto3-1.34.162.dist-info/: RECORD
chapter3/python/charset_normalizer-3.4.1.dist-info/: RECORD
chapter3/python/greenlet-3.1.1.dist-info/: RECORD
chapter3/python/httpx-0.28.1.dist-info/: RECORD
chapter3/python/jsonpatch-1.33.dist-info/: RECORD
chapter3/python/jsonpointer-3.0.0.dist-info/: RECORD
chapter3/python/langchain-0.2.0.dist-info/: RECORD
chapter3/python/langchain_aws-0.1.4.dist-info/: RECORD
chapter3/python/langchain_core-0.2.43.dist-info/: RECORD
chapter3/python/langchain_text_splitters-0.2.4.dist-info/: RECORD
chapter3/python/langsmith-0.1.147.dist-info/: RECORD
chapter3/python/orjson-3.10.16.dist-info/: RECORD
chapter3/python/pydantic_core-2.33.1.dist-info/: RECORD
chapter4/: 1_rag.py  2_boto3only.py  Dockerfile  pyproject.toml
chapter5/: Dockerfile  front-end.py  multiagent.py  pyproject.toml  take1.py  test.py
