[tool.poetry]
name = "aws-container"
version = "0.1.0"
description = ""
authors = ["m4-sato <mssst1116@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10" # 特定のPythonバージョンを指定
requests = "2.27.1"
beautifulsoup4 = "4.12.3" # パッケージ名は小文字が一般的です
boto3 = "1.34.87"
streamlit = "1.33.0"
python-dateutil = "2.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
