[tool.poetry]
name = "aws-container"
version = "0.1.0"
description = ""
authors = ["m4-sato <mssst1116@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11" # 特定のPythonバージョンを指定
requests = "2.27.1"
beautifulsoup4 = "4.12.3" # パッケージ名は小文字が一般的です
boto3 = "1.34.87"
streamlit = "1.33.0"
python-dateutil = "2.8.2"
python-dotenv = "^1.0.0"
langchain-aws = "0.1.4"
langchain = "^0.2.0"  # 最新バージョンを使用
langchain-core = "^0.2.0"
langfuse = "2.60.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
